# aegiscore-rust-author

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md
agents/: openai.yaml
crates/ara-cli/: Cargo.toml
crates/ara-cli/src/: main.rs
crates/ara-core/: Cargo.toml
crates/ara-core/src/: lib.rs
crates/ara-host-api/: Cargo.toml
crates/ara-host-api/src/: lib.rs
crates/ara-runtime/: Cargo.toml
crates/ara-runtime/src/: lib.rs
crates/ara-schemas/: Cargo.toml
crates/ara-schemas/src/: lib.rs
defaults/: blueprint-policy.toml  module-language-policy.toml  normalization-policy.toml  project-contract.toml
docs/: ara-error-codes.md  ara-logging-schema.json  ara-logging-schema.md  ara-module-language-policy.md  ara-normalization-rules.md  architecture.md  blueprint-schema.md  contract-mapping.md  final-capability-summary.md  readiness-states.md
exports/readme-package/: README.zh-CN.md
scripts/: run-self-check.ps1  validate-skill-package.ps1
templates/: author-report.md  authority-root.md  blueprint-manifest.template.json  module-catalog.template.json  module-language-policy.md  normalization-report.template.json  readiness.template.json  resolved-contract.template.json  stage-doc.md  workflow-overview.md
wrappers/: ara.bat  ara.ps1  ara.sh
