[package]
name = "ara-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ara-core = { path = "../ara-core" }
ara-runtime = { path = "../ara-runtime" }
ara-schemas = { path = "../ara-schemas" }
clap.workspace = true
serde_json.workspace = true
