[package]
name = "ara-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ara-runtime = { path = "../ara-runtime" }
ara-schemas = { path = "../ara-schemas" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
